# cyweb

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
payloads/ai-prompt/: injection.yaml
payloads/cache-poison/: host-header.yaml
payloads/cmdi/: os-command.yaml
payloads/cors/: misconfiguration.yaml
payloads/graphql/: introspection.yaml
payloads/jwt/: manipulation.yaml
payloads/ldap/: injection.yaml
payloads/lfi/: path-traversal.yaml
payloads/medical/: dicom.yaml  hl7-fhir.yaml
payloads/nosqli/: mongodb.yaml
payloads/ot/: modbus.yaml
payloads/smuggling/: cl-te.yaml
payloads/sqli/: context-php.yaml  error-based.yaml  time-based.yaml  union-based.yaml
payloads/ssrf/: cloud-metadata.yaml
payloads/ssti/: generic.yaml
payloads/xss/: reflected.yaml  waf-bypass.yaml
payloads/xxe/: external-entity.yaml
rules/: default.yaml  nikto.yaml
src/: checkpoint.rs  crawler.rs  evasion.rs  form_login.rs  fuzz.rs  main.rs  mutate.rs  nuclei_convert.rs  openapi.rs  report.rs  scanner.rs  templates.rs
src/signatures/: cves.rs  headers.rs  methods.rs  mod.rs  paths.rs  rules.rs  server.rs
tools/: convert_nikto_db.py
